crates/oxvg_actions/src/actions/structure/snapshots/oxvg_actions__actions__structure__r#move__test__step_out.snap
---
source: crates/oxvg_actions/src/actions/structure/move.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><two/><outer><one/></outer><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>two</oxvg:arg></oxvg:action><oxvg:action oxvg:id="StepOut"/></oxvg:history><oxvg:selection oxvg:ids="2"/></oxvg:state></svg>
